force-app/main/default/objects/STAR__c/STAR__c.object-meta.xml
<CustomObject>
    <description>S - Situation: Set the scene by describing the context of a specific event or challenge you faced.
T - Task: Explain the specific goal or responsibility you had in that situation.
A - Action: Detail the specific steps you took to address the task.
R - Result: Share the outcome of your actions, quantifying achievements and what you learned.</description>
    <label>STAR</label>
    <nameField>
        <displayFormat>S-{0000}</displayFormat>
        <label>STAR Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>STARs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>