force-app/main/default/objects/STAR__c/fields/Action__c.field-meta.xml
<CustomField>
    <fullName>Action__c</fullName>
    <inlineHelpText>A - Action: Detail the specific steps you took to address the task.</inlineHelpText>
    <label>Action</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>