force-app/main/default/objects/STAR__c/fields/Question__c.field-meta.xml
<CustomField>
    <fullName>Question__c</fullName>
    <inlineHelpText>What is the question or requirement for the role?</inlineHelpText>
    <label>Question</label>
    <length>5000</length>
    <type>Html</type>
</CustomField>