force-app/main/default/objects/STAR__c/fields/Result__c.field-meta.xml
<CustomField>
    <fullName>Result__c</fullName>
    <inlineHelpText>R - Result: Share the outcome of your actions, quantifying achievements and what you learned.</inlineHelpText>
    <label>Result</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>