force-app/main/default/objects/STAR__c/fields/Situation__c.field-meta.xml
<CustomField>
    <fullName>Situation__c</fullName>
    <inlineHelpText>S - Situation: Set the scene by describing the context of a specific event or challenge you faced.</inlineHelpText>
    <label>Situation</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>