force-app/main/default/objects/STAR__c/fields/Task__c.field-meta.xml
<CustomField>
    <fullName>Task__c</fullName>
    <inlineHelpText>T - Task: Explain the specific goal or responsibility you had in that situation.</inlineHelpText>
    <label>Task</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>