force-app/main/default/objects/STAR__c/fields/Theme__c.field-meta.xml
<CustomField>
    <fullName>Theme__c</fullName>
    <label>Theme</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Flow vs Apex</fullName>
            </value>
            <value>
                <fullName>GDPR</fullName>
            </value>
            <value>
                <fullName>Handling Ambiguity</fullName>
            </value>
            <value>
                <fullName>Integration / API</fullName>
            </value>
            <value>
                <fullName>Technical Debt</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>